test/domains/compilerErrors/constDomain10.chpl
const d: domain(int);
d.requestCapacity(10);

